WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228194
The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction
https://bugs.webkit.org/show_bug.cgi?id=228194
Summary
The network process fails to take a locked file assertion when executing a SQ...
Chris Dumez
Reported
2021-07-22 13:56:01 PDT
The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction. This means we may suspend in the middle of that statement and crash due to holding locked files.
Attachments
Patch
(2.40 KB, patch)
2021-07-22 14:02 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-07-22 14:02:07 PDT
Created
attachment 434035
[details]
Patch
Geoffrey Garen
Comment 2
2021-07-22 14:13:51 PDT
Comment on
attachment 434035
[details]
Patch r=me
EWS
Comment 3
2021-07-22 17:09:39 PDT
Committed
r280211
(
239898@main
): <
https://commits.webkit.org/239898@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434035
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-07-22 17:10:31 PDT
<
rdar://problem/80991735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug