The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction https://bugs.webkit.org/show_bug.cgi?id=228194

Reviewed by Geoffrey Garen.

The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction.
This means we may suspend in the middle of that statement and crash due to holding locked files.

To address this, we now make sure to bump the transaction count during the sqlite3_step() call if we're not
in the middle of a transaction and the current statement is not read-only (e.g. SELECT). Note that SQLite will
implicitly create a transaction for us in such cases.

* platform/sql/SQLiteStatement.cpp:
(WebCore::SQLiteStatement::step):


Canonical link: https://commits.webkit.org/239898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280211 268f45cc-cd09-0410-ab3c-d52691b4dbfc